--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   # See https://render.com/docs/blueprint-spec for more info on render blueprints
   - type: web
-    name: appCJ_01
+    name: psupdtpaes
     env: python
-    plan: free
+    plan: starter
     # A requirements.txt file must exist
     buildCommand: pip install -r requirements.txt
     # A src/app.py file must exist and contain `server=app.server`
